Prevent line breaks in navbar items

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -170,6 +170,7 @@ footer a:hover {
   margin-right: 0.25rem;
   text-transform: uppercase;
   align-self: baseline;
+  min-width: fit-content;
 }
 
 .nav-modal .active {
